refactor: Update method retrieval and add null check in `AutoConverterProcessor`